Second Push To Git

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@wix/data": "^1.0.338",
+    "@wix/sdk": "^1.17.4",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
